--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -10,7 +10,7 @@
       <%= image_tag @item.image, class: 'buy-item-img' %>
       <div class='buy-item-right-content'>
         <h2 class='buy-item-text'>
-          <%= @item.name %>
+          <%= @item.user.nickname %>
         </h2>
         <div class='buy-item-price'>
           <p class='item-price-text'>¥<%= @item.price %></p>
@@ -32,6 +32,7 @@
     <%# /支払額の表示 %>
 
     <%= form_with model: @delivery_record, url: item_orders_path, id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+    <%= render 'shared/error_messages', model: f.object %>
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
