--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -128,6 +128,7 @@
     </div>
     <ul class='item-lists'>
 
+    <% if @items.present? %>
       <% @items.each do |item| %>
       <li class='list'>
         <%= link_to item_path(item.id) do %>
@@ -157,7 +158,7 @@
       </li>
       <% end %>
 
-      <% if @items = nil %> 
+      <% else %> 
       <li class='list'>
         <%= link_to '#' do %>
         <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
